[gd_scene load_steps=5 format=2]

[ext_resource path="res://testing/samuel/level3/alarmNote.tscn" type="PackedScene" id=1]
[ext_resource path="res://testing/samuel/scripts/spawnPath.gd" type="Script" id=2]
[ext_resource path="res://testing/samuel/level3/alarmBar.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="level3" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 2 )
alarmNote_scene = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="alarmBar" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
